[gd_scene load_steps=4 format=3 uid="uid://studio_open_002_scene"]

[ext_resource type="Script" path="res://scripts/apartments/apartment_unit.gd" id="1_apartment_unit"]
[ext_resource type="Script" path="res://scripts/cameras/apartment_camera_controller.gd" id="2_camera_controller"]
[ext_resource type="Script" path="res://scripts/ui/esc_menu.gd" id="3_esc_menu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(8, 0.2, 6.5)

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(8, 0.2, 6.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.88, 0.85, 0.8, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall_long"]
size = Vector3(0.2, 3, 6.5)

[sub_resource type="BoxMesh" id="BoxMesh_wall_long"]
size = Vector3(0.2, 3, 6.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall_short"]
size = Vector3(8, 3, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_wall_short"]
size = Vector3(8, 3, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_interior_wall_medium"]
size = Vector3(2.0, 3, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_interior_wall_medium"]
size = Vector3(2.0, 3, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_interior_wall_short"]
size = Vector3(1.5, 3, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_interior_wall_short"]
size = Vector3(1.5, 3, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wall"]
albedo_color = Color(0.95, 0.95, 0.9, 1)

[sub_resource type="Environment" id="Environment_default"]
background_mode = 1
background_color = Color(0.75, 0.85, 0.95, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.4

[node name="StudioOpenApartment" type="Node3D"]
script = ExtResource("1_apartment_unit")
apartment_id = "apt_studio_open_002"

[node name="Structure" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/Floor"]
mesh = SubResource("BoxMesh_floor")
surface_material_override/0 = SubResource("StandardMaterial3D_floor")

[node name="WallLeft" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/WallLeft"]
shape = SubResource("BoxShape3D_wall_long")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/WallLeft"]
mesh = SubResource("BoxMesh_wall_long")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="WallRight" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/WallRight"]
shape = SubResource("BoxShape3D_wall_long")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/WallRight"]
mesh = SubResource("BoxMesh_wall_long")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="WallBack" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -3.25)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/WallBack"]
shape = SubResource("BoxShape3D_wall_short")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/WallBack"]
mesh = SubResource("BoxMesh_wall_short")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="WallFront" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 3.25)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/WallFront"]
shape = SubResource("BoxShape3D_wall_short")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/WallFront"]
mesh = SubResource("BoxMesh_wall_short")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="BathroomWall" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.5, 2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/BathroomWall"]
shape = SubResource("BoxShape3D_interior_wall_medium")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/BathroomWall"]
mesh = SubResource("BoxMesh_interior_wall_medium")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="BedroomWall" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.25, 1.5, 2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/BedroomWall"]
shape = SubResource("BoxShape3D_interior_wall_short")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/BedroomWall"]
mesh = SubResource("BoxMesh_interior_wall_short")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="OfficeWall" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.5, 2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/OfficeWall"]
shape = SubResource("BoxShape3D_interior_wall_short")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/OfficeWall"]
mesh = SubResource("BoxMesh_interior_wall_short")
surface_material_override/0 = SubResource("StandardMaterial3D_wall")

[node name="Lighting" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lighting"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 7, 0)
light_energy = 0.9
shadow_enabled = true

[node name="MainAreaLight" type="OmniLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -1)
light_energy = 0.7
omni_range = 6.0

[node name="KitchenLight" type="OmniLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 2.2, -1)
light_energy = 0.5
omni_range = 3.5

[node name="BedroomLight" type="OmniLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.3, 2.2, 2.15)
light_energy = 0.4
omni_range = 2.5

[node name="BathroomLight" type="OmniLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2.2, 2.25)
light_energy = 0.3
omni_range = 2.0

[node name="FurnitureZones" type="Node3D" parent="."]

[node name="LivingZone" type="Marker3D" parent="FurnitureZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0.5)

[node name="SleepingZone" type="Marker3D" parent="FurnitureZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -2)

[node name="DiningZone" type="Marker3D" parent="FurnitureZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -1.5)

[node name="KitchenZone" type="Marker3D" parent="FurnitureZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -1)

[node name="BedroomZone" type="Marker3D" parent="FurnitureZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.3, 0, 2.15)

[node name="OfficeZone" type="Marker3D" parent="FurnitureZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 2.15)

[node name="BathroomZone" type="Marker3D" parent="FurnitureZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 2.25)

[node name="EntryZone" type="Marker3D" parent="FurnitureZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25, 0, 2.6)

[node name="ApartmentCameraController" type="Node3D" parent="."]
transform = Transform3D(0.866025, -0.3, 0.4, 0, 0.8, 0.6, -0.5, -0.52, 0.693, 5, 4, 5)
script = ExtResource("2_camera_controller")

[node name="Camera3D" type="Camera3D" parent="ApartmentCameraController"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="EscMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("3_esc_menu")

[node name="InfoPanel" type="Panel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -180.0
offset_right = 520.0
offset_bottom = -20.0
modulate = Color(1, 1, 1, 0.9)

[node name="InfoContainer" type="VBoxContainer" parent="UI/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ApartmentTitle" type="Label" parent="UI/InfoPanel/InfoContainer"]
layout_mode = 2
text = "Open Concept Studio Apartment (52 sqm)"
add_theme_font_size_override("font_size", 16)

[node name="DimensionsLabel" type="Label" parent="UI/InfoPanel/InfoContainer"]
layout_mode = 2
text = "Overall: 8.0m Ã— 6.5m"
add_theme_font_size_override("font_size", 12)

[node name="RoomsLabel" type="Label" parent="UI/InfoPanel/InfoContainer"]
layout_mode = 2
text = "Rooms: Open Main Area, Kitchen, Bedroom, Bathroom, Office, Entry"
add_theme_font_size_override("font_size", 12)

[node name="FeaturesLabel" type="Label" parent="UI/InfoPanel/InfoContainer"]
layout_mode = 2
text = "Features: Open concept living/dining, Separate bedroom, Office nook"
add_theme_font_size_override("font_size", 11)
modulate = Color(0.8, 0.8, 0.8, 1)

[node name="ControlsLabel" type="Label" parent="UI/InfoPanel/InfoContainer"]
layout_mode = 2
text = "ESC - Menu | WASD - Move | Mouse - Look"
add_theme_font_size_override("font_size", 10)
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_default")